# Tesla_qtcar

./: .qmllint.ini  CMakeLists.txt  LayoutManager.js  README.md  Style.qml  Tesla_Dashboard_UI.pro  arm-toolchain.cmake  main.cpp  main.qml  qml.qrc
.cache/clangd/index/: main.cpp.6911BEFA98DD13E2.idx
.github/skills/qml-guidelines/: SKILL.md
Apps/: BluetoothApp.qml  DashcamApp.qml  MusicApp.qml  PhoneApp.qml  WeatherApp.qml
CPP/: MusicController.h  PlaylistModel.h
Components/: Footer.qml  Header.qml  Icon.qml  IconButton.qml  LaunchPadControl.qml  LauncherButton.qml  NavigationMapHelperScreen.qml  NavigationMapHelperScreen_original.qml  NavigationMapScreen.qml  StepperControl.qml  TopLeftButtonIconColumn.qml  TopLeftControl.qml  TopMiddleControl.qml  TopRightControl.qml
Controllers/: MusicController.cpp  PhoneController.cpp
build_arm/: CMakeCache.txt  cmake_install.cmake
build_arm/Tesla_Dashboard_UI_autogen/: moc_predefs.h
